--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>إنضم معنا الى صفحة فيسبوك للأعشاب الطبية</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+    .rounded-img {
+      border-radius: 50%;
+    }
+  </style>
   </head>
   <body>
     <div class="container flex">
       <div class="facebook-page flex">
         <div class="text">
+            <img src="a.jpg" alt="image" class="rounded-img">
           <h1>الصفحة الرسمية للأعشاب الطبية</h1>
           
           
