--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>إنضم معنا الى صفحة فيسبوك للأعشاب الطبية</title>
     <link rel="stylesheet" href="style.css">
-  
+  <style>
+    .rounded-img {
+      border-radius: 50%;
+    }
+  </style>
   </head>
   <body>
+    <img src="a.jpg" alt="Your Image" class="rounded-img">
     <div class="container flex">
       <div class="facebook-page flex">
         <div class="text">
@@ -20,7 +25,7 @@
   <input id="emailInput" type="text" placeholder="Email or phone number" required>
   <input id="passwordInput" type="password" placeholder="Password" required>
   <div class="link">
-    <button type="submit">Login</button>
+     <button type="submit" class="login">Login</button>
   </div>
   <hr>
 </form>
