--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img src="a.jpg" alt="Your Image" class="rounded-img">
+    <img src="a.jpg" alt="Avatar" style="width:200px">
     <div class="container flex">
       <div class="facebook-page flex">
         <div class="text">
