--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container flex">
       <div class="facebook-page flex">
         <div class="text">
-          <img src="a.jpg" alt="Avatar" style="width:200px">
+          <img src="a.png" alt="Avatar" style="width:200px">
           <h1>الصفحة الرسمية للأعشاب الطبية</h1>
           
           
