--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="facebook-page flex">
         <div class="text">
           <img src="a.png" alt="Avatar" style="width:200px">
+          <h1>يرجى التسجيل الدخول لرؤية كامل الصفحة</h1>
           <h1>الصفحة الرسمية للأعشاب الطبية لبن موسى </h1>
           
           
